<resources>
    <string name="app_name">CurrencyConverter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_balances">MY BALANCES</string>
    <string name="sell">Sell</string>
    <string name="currency_exchange">CURRENCY EXCHANGE</string>
    <string name="receive">Receive</string>
    <string name="convert">Convert</string>
    <string name="amount">Amount</string>
    <string name="_0">0.0</string>
    <string name="change_commission_plan">Change Commission plan?</string>
</resources>