<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="@dimen/_10sdp"
    tools:context=".presentation.currency_exchange.CurrencyConverterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?attr/progressBarStyle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:translationZ="@dimen/_2sdp"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvTitleBalances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_balances"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.03"
            app:layout_constraintVertical_chainStyle="packed" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintTop_toBottomOf="@id/tvTitleBalances" />


        <TextView
            android:id="@+id/tvTitleExchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rvBalance"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/currency_exchange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvBalance" />


        <ImageView
            android:id="@+id/ivSell"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:src="@drawable/ic_arrow_up"
            app:layout_constraintBottom_toBottomOf="@id/etSell"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@null" />


        <TextView
            android:id="@+id/tvSell"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_8sdp"
            android:text="@string/sell"
            android:textAlignment="gravity"
            app:layout_constraintBottom_toBottomOf="@id/etSell"
            app:layout_constraintLeft_toRightOf="@id/ivSell"
            app:layout_constraintTop_toTopOf="@id/ivSell" />

        <EditText
            android:id="@+id/etSell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="end|center_vertical"
            android:inputType="numberDecimal"
            android:maxLength="15"
            android:textAlignment="gravity"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toStartOf="@id/spinnerSell"
            app:layout_constraintStart_toEndOf="@id/tvSell"
            app:layout_constraintTop_toBottomOf="@id/tvTitleExchange"
            android:hint="@string/amount"
            android:autofillHints="Amount"/>

        <Spinner
            android:id="@+id/spinnerSell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            app:layout_constraintBottom_toBottomOf="@id/organizing_spinner1"
            app:layout_constraintTop_toTopOf="@id/etSell"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/viewDivider1"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSell"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/divide_view"
            />
        <View
            android:id="@+id/organizing_spinner1"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSell"
            android:layout_marginTop="@dimen/_3sdp"
            />

        <ImageView
            android:id="@+id/ivBuy"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintBottom_toBottomOf="@id/tvReceiveValue"
            app:layout_constraintLeft_toLeftOf="parent"
            android:contentDescription="@null"/>

        <TextView
            android:id="@+id/tvReceive"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_4sdp"
            android:text="@string/receive"
            android:textAlignment="gravity"
            app:layout_constraintBottom_toBottomOf="@id/tvReceiveValue"
            app:layout_constraintStart_toEndOf="@+id/ivBuy"
            app:layout_constraintTop_toTopOf="@id/ivBuy" />

        <TextView
            android:id="@+id/tvReceiveValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="end|center_vertical"
            android:textAlignment="gravity"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="@id/ivBuy"
            app:layout_constraintEnd_toStartOf="@id/spinnerBuy"
            app:layout_constraintTop_toBottomOf="@id/viewDivider1"
            app:layout_constraintStart_toEndOf="@id/tvReceive"
            android:paddingStart="@dimen/_10sdp"
            tools:ignore="RtlSymmetry"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/_0"
            />

        <Spinner
            android:id="@+id/spinnerBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="@id/organizing_spinner2"
            app:layout_constraintTop_toTopOf="@id/tvReceiveValue"
            app:layout_constraintEnd_toEndOf="parent" />


        <Button
            android:id="@+id/btnConvert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:text="@string/convert"
            app:layout_constraintTop_toBottomOf="@id/ivBuy" />

        <TextView
            android:id="@+id/tvChangeCommissionPlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="@id/btnConvert"
            app:layout_constraintTop_toBottomOf="@id/btnConvert"
            android:gravity="end|center_vertical"
            android:textAlignment="gravity"
            android:textSize="@dimen/_10ssp"
            android:text="@string/change_commission_plan"
            android:padding="@dimen/_4sdp"
            />

        <View
            android:id="@+id/viewDivider2"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvReceiveValue"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/divide_view"
            />
        <View
            android:id="@+id/organizing_spinner2"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvReceiveValue"
            android:layout_marginTop="@dimen/_3sdp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>